--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,6 +59,7 @@
                         </div>
               </nav>
             </div> -->
+
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Add New Marker</h3>
@@ -110,12 +111,11 @@
                  <button type="submit" class="btn btn-primary tsub">Add Marker</button> -->
                 </form>
               </div>
-              </div>
             <!-- </div>
                       </div>
                   </div> -->
 
-
+<div class="jumbotron">
 <article>
             <!--Page Google Map-->
 
@@ -159,5 +159,6 @@
          </ul>
         </h3> -->
 
-
+</div>
+</div>
 </div>
